--- a/data_explore_dc.ipynb
+++ b/data_explore_dc.ipynb
@@ -406,6 +406,9 @@
     "    #decide if i should only use recent projects\n",
     "    #for each column, check missing or 0 values, and decide how to handle\n",
     "    #fill in urban by creating list of zips with missing and looking up\n",
+    "    #create script to clean data\n",
+    "    #pickle final data\n",
+    "    #create script to run modeling \n",
     "#Check distros and decide if valuable:\n",
     "    #students reached = how many 0's, than how many nans?\n",
     "    #school types"
@@ -909,9 +912,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression             0.8818\n",
+      "KNeighborsClassifier           0.7208\n",
+      "GaussianNB                     0.5394"
+     ]
+    }
+   ],
    "source": [
     "names, accs = [], []\n",
     "for algorithm in (LogisticRegression, \n",
@@ -922,7 +935,7 @@
     "                 RandomForestClassifier):\n",
     "    accuracy = np.mean(cross_val_score(algorithm(), X, y, cv = 10))\n",
     "    print '%-30s %0.4f' % (algorithm.__name__, accuracy)\n",
-    "    names,append(algorithm.__name__)\n",
+    "    names.append(algorithm.__name__)\n",
     "    accs.append(accuracy)"
    ]
   },
@@ -932,30 +945,17 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gaussian Naive Bayes test accuracy score: "
-     ]
-    }
-   ],
-   "source": [
-    "def test_model(name, main_model):\n",
-    "    model = main_model\n",
-    "    model.fit(x_train, y_train)\n",
-    "    y_pred = model.predict(x_test)\n",
-    "    print name, \"test accuracy score:\", accuracy_score(y_test, model.predict(x_test))\n",
-    "    \n",
-    "#test_model(\"KNN\", KNeighborsClassifier())\n",
-    "#test_model(\"Logistic Regression\", LogisticRegression())\n",
-    "#test_model(\"Gaussian Naive Bayes\", GaussianNB())\n",
-    "#test_model(\"Gaussian Naive Bayes\", GaussianNB())\n",
-    "#test_model(\"SVM Classifier\", SVC())\n",
-    "#test_model(\"Decision Tree\", DecisionTreeClassifier())\n",
-    "#test_model(\"Random Forest\", RandomForestClassifier())"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
