--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -5740,7 +5740,81 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.DataFrame(pickle.load(open('clean_2015_data.pkl', 'rb')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "school_df = df[0:100]\n",
+    "school_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_school_counts(row, df):\n",
+    "    filter = (df[\"_schoolid\"] == row[\"_schoolid\"])  & (df[\"date_completed\"] < row[\"date_completed\"])\n",
+    "    dc_count = df[filter][\"date_completed\"].count()\n",
+    "    print row['_schoolid']\n",
+    "    return pd.Series([dc_count])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%time \n",
+    "school_df[[\"school_previous_completed\"]] = school_df.apply(lambda x : get_school_counts(x, school_df),axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%time \n",
+    "gg = school_df.groupby(\"_schoolid\")  \n",
+    "df_ = pd.DataFrame()\n",
+    "for g, df in gg:\n",
+    "    df['school_previous_success'] = df.date_posted.map(lambda x: len(df[df.date_completed < x]))\n",
+    "    df['school_previous_projects'] = df.date_posted.map(lambda x: len(df[df.date_posted < x]))\n",
+    "    df['school_per_success'] = df.school_previous_success/df.school_previous_projects\n",
+    "    df_ = pd.concat([df_, df])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "posted = school_df.set_index('date_posted').groupby('_schoolid').cumcount()\n",
+    "print posted\n",
+    "\n",
+    "school_df['school_previous_posted'] = posted.values"
+   ]
   },
   {
    "cell_type": "code",
